<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.serenapascual.alphafitness.RecordWorkoutFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/record_workout"
                android:textSize="26sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/userProfileButton1"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_user_profile"
                android:onClick="viewProfile" />
        </RelativeLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/distance_uppercase"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/duration_uppercase"
                    android:textSize="14sp"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="2.6"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="0:25:52"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="km"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="Minutes"
                    android:textSize="14sp"/>
            </TableRow>
        </TableLayout>
        <!--Insert Google Maps fragment-->
        <FrameLayout
            android:id="@+id/googleMapsFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/workoutButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/green"
            android:onClick="startWorkout"
            android:text="@string/start_workout_uppercase"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>
