<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.serenapascual.alphafitness.ProfileActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:id="@+id/userNameLayout">
        <ImageButton
            android:id="@+id/userProfileButton2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_user_profile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/userProfileButton2"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="Henry Steinway"
            android:textSize="26dp"/>
    </RelativeLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameLayout"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:stretchColumns="*"
        android:orientation="horizontal"
        android:id="@+id/userInfoLayout">
        <TableRow>
            <LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/gender"
                    android:textSize="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_horizontal"
                    android:background="@color/lightGray"
                    android:text="Male"
                    android:textSize="16dp"/>
            </LinearLayout>
            <LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/weight"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_horizontal"
                    android:background="@color/lightGray"
                    android:text="170 lbs"
                    android:textSize="16sp"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomLayout"
        android:orientation="vertical"
        android:background="@color/lightGray"
        android:stretchColumns="0"
        android:id="@+id/userStatsLayout">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/average_weekly"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/distance"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:background="@color/white"/>
            <TextView
                android:text="2.4 km"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:gravity="end"
                android:paddingTop="3dp"
                android:paddingRight="7dp"
                android:paddingBottom="3dp"
                android:background="@color/white"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/time"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:background="@color/white"/>
            <TextView
                android:text="1 hr 34 min 05 sec"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:gravity="right"
                android:paddingTop="3dp"
                android:paddingRight="7dp"
                android:paddingBottom="3dp"
                android:background="@color/white"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/workouts"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:background="@color/white"/>
            <TextView
                android:text="2 times"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:gravity="right"
                android:paddingTop="3dp"
                android:paddingRight="7dp"
                android:paddingBottom="3dp"
                android:background="@color/white"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/calories_burned"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:background="@color/white"/>
            <TextView
                android:text="1,000 kcal"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:gravity="end"
                android:paddingTop="3dp"
                android:paddingRight="7dp"
                android:paddingBottom="3dp"
                android:background="@color/white"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/all_time"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/distance"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:background="@color/white"/>
            <TextView
                android:text="1,548.4 km"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:gravity="end"
                android:paddingTop="3dp"
                android:paddingRight="7dp"
                android:paddingBottom="3dp"
                android:background="@color/white"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/time"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:background="@color/white"/>
            <TextView
                android:text="1 day 23 hr 34 min 15 sec"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:gravity="end"
                android:paddingTop="3dp"
                android:paddingRight="7dp"
                android:paddingBottom="3dp"
                android:background="@color/white"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/workouts"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:background="@color/white"/>
            <TextView
                android:text="112 times"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:gravity="end"
                android:paddingTop="3dp"
                android:paddingRight="7dp"
                android:paddingBottom="3dp"
                android:background="@color/white"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/calories_burned"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:background="@color/white"/>
            <TextView
                android:text="410,000 kcal"
                android:textSize="19sp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:gravity="end"
                android:paddingTop="3dp"
                android:paddingRight="7dp"
                android:paddingBottom="3dp"
                android:background="@color/white"/>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:id="@+id/bottomLayout">
    </RelativeLayout>
</RelativeLayout>
