<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.serenapascual.alphafitness.WorkoutDetailsFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mediumGray"
        android:stretchColumns="1, 2, 3, 4, 5, 6">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/workout_details"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_span="3"
                android:background="@color/lightGray"
                android:gravity="center"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:layout_gravity="center_vertical"
                        android:gravity="top"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/avg_uppercase"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="3:41"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:layout_gravity="center_vertical"
                        android:gravity="bottom"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/min_per_km"
                        android:textSize="14sp"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="3"
                android:stretchColumns="*">

                <TableRow
                    android:layout_marginBottom="1dp"
                    android:background="@color/lightGray"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_column="0"
                        android:gravity="top"
                        android:paddingStart="5dp"
                        android:text="@string/max_uppercase"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:padding="2dp"
                        android:text="1:57"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:paddingEnd="5dp"
                        android:layout_column="2"
                        android:gravity="bottom"
                        android:text="@string/min_per_km"
                        android:textSize="14sp"/>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="1dp"
                    android:background="@color/lightGray"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_column="0"
                        android:gravity="top"
                        android:paddingStart="5dp"
                        android:text="@string/min_uppercase"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_column="1"
                        android:padding="2dp"
                        android:text="7:34"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_column="2"
                        android:paddingEnd="5dp"
                        android:gravity="bottom"
                        android:text="@string/min_per_km"
                        android:textSize="14sp"/>
                </TableRow>

            </TableLayout>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary" />

</RelativeLayout>
